Update to v0.2.5 Fixed right image position making the toast's width be MATCH_PARENT at all times Upgraded demo a bit (still needs more work) Need to re-implemented width/height variables of builder.. Will come later.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,9 @@
 <resources>
 
     <string name="app_name">Boast Demo</string>
+    <string name="main_title">Boast Library Demo</string>
 
-    <string name="button_text">Click me</string>
+    <string name="different_styles_button_text">Standard - Different styles</string>
+    <string name="custom_style_button">Custom style</string>
 
 </resources>
