update to Boast demo minor updates to Boast lib

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,9 @@
     <string name="main_title">Boast Library Demo</string>
 
     <string name="different_styles_button_text">Standard - Different styles</string>
-    <string name="custom_style_button">Custom style</string>
+    <string name="custom_style_one_button_text">Custom style one</string>
+    <string name="custom_style_two_button_text">Custom style two</string>
+    <string name="image_left_button_text">Image left</string>
+    <string name="image_right_button_text">Image right</string>
 
 </resources>
